Fixed #2604: no #... in hrefs to top of file
Top level modules get as bindingSite the beginning of file (see
Generate.hs).  To jump to position 1, we do not need the #... part.

--- a/test/LaTeXAndHTML/succeed/AccidentalSpacesAfterBeginCode.html
+++ b/test/LaTeXAndHTML/succeed/AccidentalSpacesAfterBeginCode.html
@@ -20,7 +20,7 @@
       >\begin{code}     
 <a name="81" class="Keyword"
       >module</a
-      > <a name="88" href="AccidentalSpacesAfterBeginCode.html#AccidentalSpacesAfterBeginCode" class="Module"
+      > <a name="88" href="AccidentalSpacesAfterBeginCode.html" class="Module"
       >AccidentalSpacesAfterBeginCode</a
       > <a name="119" class="Keyword"
       >where</a
