--- a/test/LaTeXAndHTML/succeed/Indenting4.html
+++ b/test/LaTeXAndHTML/succeed/Indenting4.html
@@ -20,7 +20,7 @@
       >\begin{code}
 <a name="76" class="Keyword"
       >module</a
-      > <a name="83" href="Indenting4.html#Indenting4" class="Module"
+      > <a name="83" href="Indenting4.html" class="Module"
       >Indenting4</a
       > <a name="94" class="Keyword"
       >where</a
