--- a/test/LaTeXAndHTML/succeed/Indenting7.html
+++ b/test/LaTeXAndHTML/succeed/Indenting7.html
@@ -18,7 +18,7 @@
       >\begin{code}
 <a name="74" class="Keyword"
       >module</a
-      > <a name="81" href="Indenting7.html#Indenting7" class="Module"
+      > <a name="81" href="Indenting7.html" class="Module"
       >Indenting7</a
       > <a name="92" class="Keyword"
       >where</a
