--- a/test/LaTeXAndHTML/succeed/InfixDeclaration.html
+++ b/test/LaTeXAndHTML/succeed/InfixDeclaration.html
@@ -19,7 +19,7 @@
       >\begin{code}
 <a name="75" class="Keyword"
       >module</a
-      > <a name="82" href="InfixDeclaration.html#InfixDeclaration" class="Module"
+      > <a name="82" href="InfixDeclaration.html" class="Module"
       >InfixDeclaration</a
       > <a name="99" class="Keyword"
       >where</a
