--- a/test/LaTeXAndHTML/succeed/Issue1241.html
+++ b/test/LaTeXAndHTML/succeed/Issue1241.html
@@ -24,7 +24,7 @@ This is the actual test.
       >\begin{code}
 <a name="114" class="Keyword"
       >module</a
-      > <a name="121" href="Issue1241.html#Issue1241" class="Module"
+      > <a name="121" href="Issue1241.html" class="Module"
       >_</a
       > <a name="123" class="Keyword"
       >where</a
