--- a/test/LaTeXAndHTML/succeed/Issue2019.html
+++ b/test/LaTeXAndHTML/succeed/Issue2019.html
@@ -63,7 +63,7 @@
       >open</a
       > <a name="443" class="Keyword"
       >import</a
-      > <a name="450" href="Agda.Builtin.String.html#Agda" class="Module"
+      > <a name="450" href="Agda.Builtin.String.html" class="Module"
       >Agda.Builtin.String</a
       >
 
