--- a/test/LaTeXAndHTML/succeed/Issue2445.html
+++ b/test/LaTeXAndHTML/succeed/Issue2445.html
@@ -18,7 +18,7 @@
       >\begin{code}
 <a name="57" class="Keyword"
       >module</a
-      > <a name="64" href="Issue2445.html#Issue2445" class="Module"
+      > <a name="64" href="Issue2445.html" class="Module"
       >_</a
       > <a name="66" class="Keyword"
       >where</a
