--- a/test/LaTeXAndHTML/succeed/Issue2536.html
+++ b/test/LaTeXAndHTML/succeed/Issue2536.html
@@ -21,7 +21,7 @@
       >\begin{code}
 <a name="89" class="Keyword"
       >module</a
-      > <a name="96" href="Issue2536.html#Issue2536" class="Module"
+      > <a name="96" href="Issue2536.html" class="Module"
       >_</a
       > <a name="98" class="Keyword"
       >where</a
