--- a/test/LaTeXAndHTML/succeed/Issue2588.html
+++ b/test/LaTeXAndHTML/succeed/Issue2588.html
@@ -20,7 +20,7 @@
       >\begin{code}
 <a name="76" class="Keyword"
       >module</a
-      > <a name="83" href="Issue2588.html#Issue2588" class="Module"
+      > <a name="83" href="Issue2588.html" class="Module"
       >Issue2588</a
       > <a name="93" class="Keyword"
       >where</a
