--- a/test/LaTeXAndHTML/succeed/Issue2604.html
+++ b/test/LaTeXAndHTML/succeed/Issue2604.html
@@ -18,7 +18,7 @@
 
 <a name="78" class="Keyword"
       >module</a
-      > <a name="85" href="Issue2604.html#Issue2604" class="Module"
+      > <a name="85" href="Issue2604.html" class="Module"
       >Issue2604</a
       > <a name="95" class="Keyword"
       >where</a
