--- a/test/LaTeXAndHTML/succeed/LaTeX-succeed.html
+++ b/test/LaTeXAndHTML/succeed/LaTeX-succeed.html
@@ -21,7 +21,7 @@
       >\begin{code}
 <a name="87" class="Keyword"
       >module</a
-      > <a name="94" href="LaTeX-succeed.html#LaTeX-succeed" class="Module"
+      > <a name="94" href="LaTeX-succeed.html" class="Module"
       >LaTeX-succeed</a
       > <a name="108" class="Keyword"
       >where</a
