--- a/test/LaTeXAndHTML/succeed/MdMultiLanguage.html
+++ b/test/LaTeXAndHTML/succeed/MdMultiLanguage.html
@@ -15,7 +15,7 @@
       >```
 <a name="10" class="Keyword"
       >module</a
-      > <a name="17" href="MdMultiLanguage.html#MdMultiLanguage" class="Module"
+      > <a name="17" href="MdMultiLanguage.html" class="Module"
       >MdMultiLanguage</a
       > <a name="33" class="Keyword"
       >where</a
