--- a/test/LaTeXAndHTML/succeed/MdQuotedDelim.html
+++ b/test/LaTeXAndHTML/succeed/MdQuotedDelim.html
@@ -12,7 +12,7 @@
     >```
   <a name="7" class="Keyword"
       >module</a
-      > <a name="14" href="MdQuotedDelim.html#MdQuotedDelim" class="Module"
+      > <a name="14" href="MdQuotedDelim.html" class="Module"
       >MdQuotedDelim</a
       > <a name="28" class="Keyword"
       >where</a
