--- a/test/LaTeXAndHTML/succeed/Multiline.html
+++ b/test/LaTeXAndHTML/succeed/Multiline.html
@@ -19,7 +19,7 @@
       >open</a
       > <a name="78" class="Keyword"
       >import</a
-      > <a name="85" href="Agda.Builtin.String.html#Agda" class="Module"
+      > <a name="85" href="Agda.Builtin.String.html" class="Module"
       >Agda.Builtin.String</a
       >
 
