--- a/test/LaTeXAndHTML/succeed/NoNewLinesVsNewLines.html
+++ b/test/LaTeXAndHTML/succeed/NoNewLinesVsNewLines.html
@@ -20,7 +20,7 @@
       >\begin{code}
 <a name="76" class="Keyword"
       >module</a
-      > <a name="83" href="NoNewLinesVsNewLines.html#NoNewLinesVsNewLines" class="Module"
+      > <a name="83" href="NoNewLinesVsNewLines.html" class="Module"
       >NoNewLinesVsNewLines</a
       > <a name="104" class="Keyword"
       >where</a
