--- a/test/LaTeXAndHTML/succeed/RsTQuotedDelim.html
+++ b/test/LaTeXAndHTML/succeed/RsTQuotedDelim.html
@@ -15,7 +15,7 @@
       >::
   <a name="9" class="Keyword"
       >module</a
-      > <a name="16" href="RsTQuotedDelim.html#RsTQuotedDelim" class="Module"
+      > <a name="16" href="RsTQuotedDelim.html" class="Module"
       >RsTQuotedDelim</a
       > <a name="31" class="Keyword"
       >where</a
