--- a/test/LaTeXAndHTML/succeed/Tag.html
+++ b/test/LaTeXAndHTML/succeed/Tag.html
@@ -20,7 +20,7 @@
       >\begin{code}
 <a name="88" class="Keyword"
       >module</a
-      > <a name="95" href="Tag.html#Tag" class="Module"
+      > <a name="95" href="Tag.html" class="Module"
       >Tag</a
       > <a name="99" class="Keyword"
       >where</a
