--- a/test/LaTeXAndHTML/succeed/TeXExtension.html
+++ b/test/LaTeXAndHTML/succeed/TeXExtension.html
@@ -22,7 +22,7 @@ Foo
 
 <a name="81" class="Keyword"
       >module</a
-      > <a name="88" href="TeXExtension.html#TeXExtension" class="Module"
+      > <a name="88" href="TeXExtension.html" class="Module"
       >TeXExtension</a
       > <a name="101" class="Keyword"
       >where</a
