--- a/test/LaTeXAndHTML/succeed/TrailingColon.html
+++ b/test/LaTeXAndHTML/succeed/TrailingColon.html
@@ -19,7 +19,7 @@ aaa
       >  ::
     <a name="26" class="Keyword"
       >module</a
-      > <a name="33" href="TrailingColon.html#TrailingColon" class="Module"
+      > <a name="33" href="TrailingColon.html" class="Module"
       >TrailingColon</a
       > <a name="47" class="Keyword"
       >where</a
