--- a/test/LaTeXAndHTML/succeed/AccidentalSpacesBeforeEndCode.html
+++ b/test/LaTeXAndHTML/succeed/AccidentalSpacesBeforeEndCode.html
@@ -20,7 +20,7 @@
       >\begin{code}
 <a name="76" class="Keyword"
       >module</a
-      > <a name="83" href="AccidentalSpacesBeforeEndCode.html#AccidentalSpacesBeforeEndCode" class="Module"
+      > <a name="83" href="AccidentalSpacesBeforeEndCode.html" class="Module"
       >AccidentalSpacesBeforeEndCode</a
       > <a name="113" class="Keyword"
       >where</a
