--- a/test/LaTeXAndHTML/succeed/OneSpaceIndent.html
+++ b/test/LaTeXAndHTML/succeed/OneSpaceIndent.html
@@ -20,7 +20,7 @@
       >\begin{code}
 <a name="86" class="Keyword"
       >module</a
-      > <a name="93" href="OneSpaceIndent.html#OneSpaceIndent" class="Module"
+      > <a name="93" href="OneSpaceIndent.html" class="Module"
       >OneSpaceIndent</a
       > <a name="108" class="Keyword"
       >where</a
