--- a/test/LaTeXAndHTML/succeed/ThreeNewLines.html
+++ b/test/LaTeXAndHTML/succeed/ThreeNewLines.html
@@ -22,7 +22,7 @@
 
 <a name="78" class="Keyword"
       >module</a
-      > <a name="85" href="ThreeNewLines.html#ThreeNewLines" class="Module"
+      > <a name="85" href="ThreeNewLines.html" class="Module"
       >ThreeNewLines</a
       > <a name="99" class="Keyword"
       >where</a
