--- a/test/LaTeXAndHTML/succeed/Issue2400-1.html
+++ b/test/LaTeXAndHTML/succeed/Issue2400-1.html
@@ -1,18 +1,5 @@
 <!DOCTYPE HTML>
-
-<html>
-    <head>
-        <title>
-            Issue2400-1
-        </title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <meta http-equiv="Content-Style-Type" content="text/css">
-        <link href="Agda.css" rel="stylesheet" type="text/css">
-    </head>
-    <body>
-        <pre>
-            <a name="1" class="Comment">
-                \documentclass{article}
+<html><head><meta charset="utf-8"><title>Issue2400-1</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Comment">\documentclass{article}
 
 \usepackage{agda}
 
@@ -23,8 +10,4 @@
 % \end{code}
 
 \end{document}
-
-            </a>
-        </pre>
-    </body>
-</html>
+</a></pre></body></html>
