--- a/test/LaTeXAndHTML/succeed/Issue2453.html
+++ b/test/LaTeXAndHTML/succeed/Issue2453.html
@@ -1,18 +1,5 @@
 <!DOCTYPE HTML>
-
-<html>
-    <head>
-        <title>
-            Issue2453
-        </title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <meta http-equiv="Content-Style-Type" content="text/css">
-        <link href="Agda.css" rel="stylesheet" type="text/css">
-    </head>
-    <body>
-        <pre>
-            <a name="1" class="Comment">
-                \nonstopmode
+<html><head><meta charset="utf-8"><title>Issue2453</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Comment">\nonstopmode
 \documentclass{article}
 
 \usepackage{agda}
@@ -22,8 +9,4 @@
 \begin{code} this is not valid agda code \end{code}
 
 \end{document}
-
-            </a>
-        </pre>
-    </body>
-</html>
+</a></pre></body></html>
