--- a/test/LaTeXAndHTML/succeed/MdOneLine.html
+++ b/test/LaTeXAndHTML/succeed/MdOneLine.html
@@ -1,21 +1,3 @@
 <!DOCTYPE HTML>
-
-<html>
-    <head>
-        <title>
-            MdOneLine
-        </title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <meta http-equiv="Content-Style-Type" content="text/css">
-        <link href="Agda.css" rel="stylesheet" type="text/css">
-    </head>
-    <body>
-        <pre>
-            <a name="1" class="Comment">
-                Hello, this is ``` postulate Truth : Set 
-            </a>
-            ```
-
-        </pre>
-    </body>
-</html>
+<html><head><meta charset="utf-8"><title>MdOneLine</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Comment">Hello, this is ``` postulate Truth : Set </a>```
+</pre></body></html>
