[ #2604 ] Extended a test case.

--- a/test/LaTeXAndHTML/succeed/Issue2604.html
+++ b/test/LaTeXAndHTML/succeed/Issue2604.html
@@ -71,4 +71,13 @@
 
 <a id="_%42∀_" href="Issue2604.html#_%2542%E2%88%80_" class="Function Operator">_%42∀_</a> <a id="1375" class="Symbol">:</a> <a id="1377" class="PrimitiveType">Set₁</a>
 <a id="1382" href="Issue2604.html#_%2542%E2%88%80_" class="Function Operator">_%42∀_</a> <a id="1389" class="Symbol">=</a> <a id="1391" class="PrimitiveType">Set</a>
+
+<a id="1396" class="Comment">-- The following two variants of the character Ö should result in</a>
+<a id="1462" class="Comment">-- distinct links.</a>
+
+<a id="Ö" href="Issue2604.html#%C3%96" class="Function">Ö</a> <a id="1484" class="Symbol">:</a> <a id="1486" class="PrimitiveType">Set₁</a>
+<a id="1491" href="Issue2604.html#%C3%96" class="Function">Ö</a> <a id="1493" class="Symbol">=</a> <a id="1495" class="PrimitiveType">Set</a>
+
+<a id="Ö" href="Issue2604.html#O%CC%88" class="Function">Ö</a> <a id="1503" class="Symbol">:</a> <a id="1505" class="PrimitiveType">Set₁</a>
+<a id="1510" href="Issue2604.html#O%CC%88" class="Function">Ö</a> <a id="1513" class="Symbol">=</a> <a id="1515" href="Issue2604.html#%C3%96" class="Function">Ö</a>
 </pre></body></html>
