[ #2604 ] names in fixity declarations should not get a binding site anchor

--- a/test/LaTeXAndHTML/succeed/InfixDeclaration.html
+++ b/test/LaTeXAndHTML/succeed/InfixDeclaration.html
@@ -29,9 +29,9 @@
       >infix</a
       > <a name="112" class="Number"
       >5</a
-      > <a name="_&gt;&gt;_" href="InfixDeclaration.html#_&gt;&gt;_" class="Datatype Operator"
+      > <a name="114" href="InfixDeclaration.html#130" class="Datatype Operator"
       >_&gt;&gt;_</a
-      > <a name="_&lt;&lt;_" href="InfixDeclaration.html#_&lt;&lt;_" class="Datatype Operator"
+      > <a name="119" href="InfixDeclaration.html#152" class="Datatype Operator"
       >_&lt;&lt;_</a
       >
 
@@ -84,9 +84,9 @@ In the following, we declare the fixity of two operators.
       >infix</a
       > <a name="374" class="Number"
       >5</a
-      > <a name="SurroundingText._+_" href="InfixDeclaration.html#SurroundingText._+_" class="Postulate Operator"
+      > <a name="376" href="InfixDeclaration.html#492" class="Postulate Operator"
       >_+_</a
-      > <a name="SurroundingText._*_" href="InfixDeclaration.html#SurroundingText._*_" class="Postulate Operator"
+      > <a name="380" href="InfixDeclaration.html#496" class="Postulate Operator"
       >_*_</a
       >
 \end{code}<a name="394" class="Comment"
