[ #2734 ] Fixed golden files.

--- a/test/LaTeXAndHTML/succeed/Issue2734.html
+++ b/test/LaTeXAndHTML/succeed/Issue2734.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html><head><meta charset="utf-8"><title>Issue2734</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Comment">\documentclass[acmsmall]{acmart}
+<html><head><meta charset="utf-8"><title>Issue2734</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Comment">\documentclass{article}
 
 \usepackage{agda}
 
@@ -11,11 +11,12 @@
 
 Text.
 </a>\begin{code}
-  <a id="163" class="Keyword">postulate</a>
-    <a id="A" href="Issue2734.html#A" class="Postulate">A</a>  <a id="180" class="Symbol">:</a> <a id="182" class="PrimitiveType">Set</a>
+  <a id="154" class="Keyword">postulate</a>
+    <a id="A" href="Issue2734.html#A" class="Postulate">A</a>  <a id="171" class="Symbol">:</a> <a id="173" class="PrimitiveType">Set</a>
 
-    <a id="B" href="Issue2734.html#B" class="Postulate">B</a>  <a id="194" class="Symbol">:</a> <a id="196" class="PrimitiveType">Set</a>
-\end{code}<a id="210" class="Comment">
+    <a id="B" href="Issue2734.html#B" class="Postulate">B</a>  <a id="185" class="Symbol">:</a> <a id="187" class="PrimitiveType">Set</a>
+\end{code}<a id="201" class="Comment">
 More text.
 
-\end{document}</a></pre></body></html>
+\end{document}
+</a></pre></body></html>
