--- a/test/LaTeXAndHTML/succeed/Issue2400-2.html
+++ b/test/LaTeXAndHTML/succeed/Issue2400-2.html
@@ -1,11 +1,3 @@
-<!DOCTYPE HTML>
-<html><head><meta charset="utf-8"><title>Issue2400-2</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Comment">\documentclass{article}
+AGDA_COMPILE_FAILED
 
-\usepackage{agda}
-
-\begin{document}
-
-\begin{code} text \end{code}
-
-\end{document}
-</a></pre></body></html>
+ret > ExitFailure 1 out > /test/LaTeXAndHTML/succeed/Issue2400-2.lagda:10,1-1 out > /test/LaTeXAndHTML/succeed/Issue2400-2.lagda:10,1: Missing body for lambda out > <EOF><ERROR> out > ... out >
