--- a/test/LaTeXAndHTML/succeed/Issue2453.html
+++ b/test/LaTeXAndHTML/succeed/Issue2453.html
@@ -1,12 +1,3 @@
-<!DOCTYPE HTML>
-<html><head><meta charset="utf-8"><title>Issue2453</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Comment">\nonstopmode
-\documentclass{article}
+AGDA_COMPILE_FAILED
 
-\usepackage{agda}
-
-\begin{document}
-
-\begin{code} this is not valid agda code \end{code}
-
-\end{document}
-</a></pre></body></html>
+ret > ExitFailure 1 out > /test/LaTeXAndHTML/succeed/Issue2453.lagda:11,1-1 out > /test/LaTeXAndHTML/succeed/Issue2453.lagda:11,1: Missing body for lambda out > <EOF><ERROR> out > ... out >
