AgdaSuppressSpace and AgdaMultiCode no longer take an argument.

--- a/test/LaTeXAndHTML/succeed/Issue2623.html
+++ b/test/LaTeXAndHTML/succeed/Issue2623.html
@@ -16,13 +16,13 @@
     <a id="160" class="Keyword">postulate</a> <a id="A" href="Issue2623.html#A" class="Postulate">A</a> <a id="172" class="Symbol">:</a> <a id="174" class="PrimitiveType">Set</a>
 \end{code}<a id="188" class="Comment">
 More text.
-\begin{AgdaMultiCode}{2}
+\begin{AgdaMultiCode}
 </a>\begin{code}
-  <a id="240" class="Keyword">mutual</a>
-\end{code}<a id="257" class="Comment">
+  <a id="237" class="Keyword">mutual</a>
+\end{code}<a id="254" class="Comment">
 </a>\begin{code}
-    <a id="275" class="Keyword">postulate</a> <a id="B" href="Issue2623.html#B" class="Postulate">B</a> <a id="287" class="Symbol">:</a> <a id="289" class="PrimitiveType">Set</a>
-\end{code}<a id="303" class="Comment">
+    <a id="272" class="Keyword">postulate</a> <a id="B" href="Issue2623.html#B" class="Postulate">B</a> <a id="284" class="Symbol">:</a> <a id="286" class="PrimitiveType">Set</a>
+\end{code}<a id="300" class="Comment">
 \end{AgdaMultiCode}
 Even more text.
 
