--- a/test/LaTeXAndHTML/succeed/Issue2744.html
+++ b/test/LaTeXAndHTML/succeed/Issue2744.html
@@ -6,68 +6,68 @@
 \begin{document}
 
 \noindent Before.
-\begin{AgdaMultiCode}{2}
+\begin{AgdaMultiCode}
 </a>\begin{code}[hide]
-  <a id="127" class="Keyword">postulate</a>
-\end{code}<a id="147" class="Comment">
+  <a id="124" class="Keyword">postulate</a>
+\end{code}<a id="144" class="Comment">
 </a>\begin{code}
-    <a id="A" href="Issue2744.html#A" class="Postulate">A</a>    <a id="170" class="Symbol">:</a> <a id="172" class="PrimitiveType">Set</a>
-\end{code}<a id="186" class="Comment">
+    <a id="A" href="Issue2744.html#A" class="Postulate">A</a>    <a id="167" class="Symbol">:</a> <a id="169" class="PrimitiveType">Set</a>
+\end{code}<a id="183" class="Comment">
 </a>\begin{code}
-    <a id="BBB" href="Issue2744.html#BBB" class="Postulate">BBB</a>  <a id="209" class="Symbol">:</a> <a id="211" class="PrimitiveType">Set</a>
-\end{code}<a id="225" class="Comment">
+    <a id="BBB" href="Issue2744.html#BBB" class="Postulate">BBB</a>  <a id="206" class="Symbol">:</a> <a id="208" class="PrimitiveType">Set</a>
+\end{code}<a id="222" class="Comment">
 \end{AgdaMultiCode}
 After.
 
 \noindent Before.
 \begin{AgdaAlign}
 </a>\begin{code}
-  <a id="305" class="Keyword">postulate</a>
-    <a id="C" href="Issue2744.html#C" class="Postulate">C</a> <a id="321" class="Symbol">:</a> <a id="323" class="PrimitiveType">Set</a>
-\end{code}<a id="337" class="Comment">
+  <a id="302" class="Keyword">postulate</a>
+    <a id="C" href="Issue2744.html#C" class="Postulate">C</a> <a id="318" class="Symbol">:</a> <a id="320" class="PrimitiveType">Set</a>
+\end{code}<a id="334" class="Comment">
 </a>\begin{code}[hide]
-    <a id="D" href="Issue2744.html#D" class="Postulate">D</a> <a id="363" class="Symbol">:</a> <a id="365" class="PrimitiveType">Set</a>
-\end{code}<a id="379" class="Comment">
+    <a id="D" href="Issue2744.html#D" class="Postulate">D</a> <a id="360" class="Symbol">:</a> <a id="362" class="PrimitiveType">Set</a>
+\end{code}<a id="376" class="Comment">
 </a>\begin{code}
-    <a id="E" href="Issue2744.html#E" class="Postulate">E</a> <a id="399" class="Symbol">:</a> <a id="401" class="PrimitiveType">Set</a>
-\end{code}<a id="415" class="Comment">
+    <a id="E" href="Issue2744.html#E" class="Postulate">E</a> <a id="396" class="Symbol">:</a> <a id="398" class="PrimitiveType">Set</a>
+\end{code}<a id="412" class="Comment">
 \end{AgdaAlign}
 After.
 
 \noindent Before.
 \begin{AgdaAlign}
 </a>\begin{code}
-  <a id="491" class="Keyword">postulate</a>
-    <a id="F" href="Issue2744.html#F" class="Postulate">F</a> <a id="507" class="Symbol">:</a> <a id="509" class="PrimitiveType">Set</a>
-\end{code}<a id="523" class="Comment">
+  <a id="488" class="Keyword">postulate</a>
+    <a id="F" href="Issue2744.html#F" class="Postulate">F</a> <a id="504" class="Symbol">:</a> <a id="506" class="PrimitiveType">Set</a>
+\end{code}<a id="520" class="Comment">
 In between.
-\begin{AgdaSuppressSpace}{2}
+\begin{AgdaSuppressSpace}
 </a>\begin{code}
-  <a id="580" class="Keyword">postulate</a>
-    <a id="G" href="Issue2744.html#G" class="Postulate">G</a> <a id="596" class="Symbol">:</a> <a id="598" class="PrimitiveType">Set</a>
-\end{code}<a id="612" class="Comment">
+  <a id="574" class="Keyword">postulate</a>
+    <a id="G" href="Issue2744.html#G" class="Postulate">G</a> <a id="590" class="Symbol">:</a> <a id="592" class="PrimitiveType">Set</a>
+\end{code}<a id="606" class="Comment">
 </a>\begin{code}[hide]
-  <a id="634" class="Keyword">postulate</a>
-\end{code}<a id="654" class="Comment">
+  <a id="628" class="Keyword">postulate</a>
+\end{code}<a id="648" class="Comment">
 </a>\begin{code}
-    <a id="H" href="Issue2744.html#H" class="Postulate">H</a> <a id="674" class="Symbol">:</a> <a id="676" class="PrimitiveType">Set</a>
-\end{code}<a id="690" class="Comment">
+    <a id="H" href="Issue2744.html#H" class="Postulate">H</a> <a id="668" class="Symbol">:</a> <a id="670" class="PrimitiveType">Set</a>
+\end{code}<a id="684" class="Comment">
 \end{AgdaSuppressSpace}
 \end{AgdaAlign}
 After.
 
 \noindent Before.
-\begin{AgdaMultiCode}{2}
+\begin{AgdaMultiCode}
 </a>\begin{code}
-  <a id="797" class="Keyword">postulate</a>
-    <a id="!_!" href="Issue2744.html#%21_%21" class="Postulate Operator">!_!</a>    <a id="818" class="Symbol">:</a> <a id="820" class="PrimitiveType">Set</a> <a id="824" class="Symbol">→</a> <a id="826" class="PrimitiveType">Set</a>
-\end{code}<a id="840" class="Comment">
+  <a id="788" class="Keyword">postulate</a>
+    <a id="!_!" href="Issue2744.html#%21_%21" class="Postulate Operator">!_!</a>    <a id="809" class="Symbol">:</a> <a id="811" class="PrimitiveType">Set</a> <a id="815" class="Symbol">→</a> <a id="817" class="PrimitiveType">Set</a>
+\end{code}<a id="831" class="Comment">
 </a>\begin{code}[hide]
-  <a id="862" class="Keyword">postulate</a>
-\end{code}<a id="882" class="Comment">
+  <a id="853" class="Keyword">postulate</a>
+\end{code}<a id="873" class="Comment">
 </a>\begin{code}
-    <a id="&lt;!_!&gt;" href="Issue2744.html#%3C%21_%21%3E" class="Postulate Operator">&lt;!_!&gt;</a>  <a id="907" class="Symbol">:</a> <a id="909" class="PrimitiveType">Set</a> <a id="913" class="Symbol">→</a> <a id="915" class="PrimitiveType">Set</a>
-\end{code}<a id="929" class="Comment">
+    <a id="&lt;!_!&gt;" href="Issue2744.html#%3C%21_%21%3E" class="Postulate Operator">&lt;!_!&gt;</a>  <a id="898" class="Symbol">:</a> <a id="900" class="PrimitiveType">Set</a> <a id="904" class="Symbol">→</a> <a id="906" class="PrimitiveType">Set</a>
+\end{code}<a id="920" class="Comment">
 \end{AgdaMultiCode}
 After.
 
