--- a/test/LaTeXAndHTML/succeed/NestedAgdaMultiCode.html
+++ b/test/LaTeXAndHTML/succeed/NestedAgdaMultiCode.html
@@ -5,8 +5,8 @@
 
 \begin{document}
 
-\begin{AgdaMultiCode}{0}
-\begin{AgdaMultiCode}{0}
+\begin{AgdaMultiCode}
+\begin{AgdaMultiCode}
 \end{AgdaMultiCode}
 \end{AgdaMultiCode}
 
