--- a/test/LaTeXAndHTML/succeed/NestedAgdaSuppressSpace.html
+++ b/test/LaTeXAndHTML/succeed/NestedAgdaSuppressSpace.html
@@ -5,8 +5,8 @@
 
 \begin{document}
 
-\begin{AgdaSuppressSpace}{0}
-\begin{AgdaSuppressSpace}{0}
+\begin{AgdaSuppressSpace}
+\begin{AgdaSuppressSpace}
 \end{AgdaSuppressSpace}
 \end{AgdaSuppressSpace}
 
