--- a/test/LaTeXAndHTML/succeed/Relative-indentation.html
+++ b/test/LaTeXAndHTML/succeed/Relative-indentation.html
@@ -25,89 +25,89 @@
       <a id="J" href="Relative-indentation.html#J" class="Postulate">J</a> <a id="225" class="Symbol">:</a> <a id="227" class="PrimitiveType">Set</a>
 \end{code}<a id="241" class="Comment">
 
-\begin{AgdaMultiCode}{2}
+\begin{AgdaMultiCode}
 </a>\begin{code}
-<a id="281" class="Keyword">postulate</a>
+<a id="278" class="Keyword">postulate</a>
   <a id="K" href="Relative-indentation.html#K" class="Postulate">K</a>  <a id="L" href="Relative-indentation.html#L" class="Postulate">L</a>
-\end{code}<a id="308" class="Comment">
+\end{code}<a id="305" class="Comment">
 </a>\begin{code}
-      <a id="M" href="Relative-indentation.html#M" class="Postulate">M</a> <a id="330" class="Symbol">:</a> <a id="332" class="PrimitiveType">Set</a>
-\end{code}<a id="346" class="Comment">
+      <a id="M" href="Relative-indentation.html#M" class="Postulate">M</a> <a id="327" class="Symbol">:</a> <a id="329" class="PrimitiveType">Set</a>
+\end{code}<a id="343" class="Comment">
 \end{AgdaMultiCode}
 
 </a>\begin{code}
-<a id="381" class="Keyword">record</a> <a id="R" href="Relative-indentation.html#R" class="Record">R</a> <a id="390" class="Symbol">:</a> <a id="392" class="PrimitiveType">Set₁</a> <a id="397" class="Keyword">where</a>
-  <a id="405" class="Keyword">field</a> <a id="R.N" href="Relative-indentation.html#R.N" class="Field">N</a> <a id="413" class="Symbol">:</a>
-            <a id="427" class="PrimitiveType">Set</a>
-\end{code}<a id="441" class="Comment">
+<a id="378" class="Keyword">record</a> <a id="R" href="Relative-indentation.html#R" class="Record">R</a> <a id="387" class="Symbol">:</a> <a id="389" class="PrimitiveType">Set₁</a> <a id="394" class="Keyword">where</a>
+  <a id="402" class="Keyword">field</a> <a id="R.N" href="Relative-indentation.html#R.N" class="Field">N</a> <a id="410" class="Symbol">:</a>
+            <a id="424" class="PrimitiveType">Set</a>
+\end{code}<a id="438" class="Comment">
 
 % There is (and should be) trailing whitespace at the end of some
 % lines below.
 
 \begin{AgdaAlign}
 text </a>\begin{code}        
-<a id="569" class="Keyword">module</a> <a id="576" href="Relative-indentation.html#576" class="Module">_</a> <a id="578" class="Keyword">where</a>
-\end{code}<a id="594" class="Comment"> more text
+<a id="566" class="Keyword">module</a> <a id="573" href="Relative-indentation.html#573" class="Module">_</a> <a id="575" class="Keyword">where</a>
+\end{code}<a id="591" class="Comment"> more text
     also text  </a>\begin{code}
-    <a id="637" class="Keyword">postulate</a> <a id="647" href="Relative-indentation.html#647" class="Postulate">O</a> <a id="649" class="Symbol">:</a> <a id="651" class="PrimitiveType">Set</a>  
-  \end{code}<a id="669" class="Comment"> text again
+    <a id="634" class="Keyword">postulate</a> <a id="644" href="Relative-indentation.html#644" class="Postulate">O</a> <a id="646" class="Symbol">:</a> <a id="648" class="PrimitiveType">Set</a>  
+  \end{code}<a id="666" class="Comment"> text again
 
  text          </a>\begin{code}            
-    <a id="726" class="Keyword">postulate</a> <a id="736" href="Relative-indentation.html#736" class="Postulate">o</a> <a id="738" class="Symbol">:</a> <a id="740" href="Relative-indentation.html#647" class="Postulate">O</a>    
-  \end{code}<a id="758" class="Comment">   text             
+    <a id="723" class="Keyword">postulate</a> <a id="733" href="Relative-indentation.html#733" class="Postulate">o</a> <a id="735" class="Symbol">:</a> <a id="737" href="Relative-indentation.html#644" class="Postulate">O</a>    
+  \end{code}<a id="755" class="Comment">   text             
 \end{AgdaAlign}
 
 </a>\begin{code}
-<a id="809" class="Keyword">postulate</a>
- <a id="P" href="Relative-indentation.html#P" class="Postulate">P</a> <a id="822" class="Symbol">:</a> <a id="824" class="PrimitiveType">Set</a>
-\end{code}<a id="838" class="Comment">
+<a id="806" class="Keyword">postulate</a>
+ <a id="P" href="Relative-indentation.html#P" class="Postulate">P</a> <a id="819" class="Symbol">:</a> <a id="821" class="PrimitiveType">Set</a>
+\end{code}<a id="835" class="Comment">
 
 </a>\begin{code}
-<a id="853" class="Keyword">module</a> <a id="860" href="Relative-indentation.html#860" class="Module">_</a> <a id="862" class="Keyword">where</a>
- <a id="869" class="Keyword">postulate</a>
-  <a id="881" href="Relative-indentation.html#881" class="Postulate">Q</a> <a id="883" class="Symbol">:</a> <a id="885" class="PrimitiveType">Set</a>
-\end{code}<a id="899" class="Comment">
+<a id="850" class="Keyword">module</a> <a id="857" href="Relative-indentation.html#857" class="Module">_</a> <a id="859" class="Keyword">where</a>
+ <a id="866" class="Keyword">postulate</a>
+  <a id="878" href="Relative-indentation.html#878" class="Postulate">Q</a> <a id="880" class="Symbol">:</a> <a id="882" class="PrimitiveType">Set</a>
+\end{code}<a id="896" class="Comment">
 
 </a>\begin{code}
-<a id="914" class="Keyword">module</a> <a id="921" href="Relative-indentation.html#921" class="Module">_</a> <a id="923" class="Keyword">where</a>
-         <a id="938" class="Keyword">postulate</a>
-          <a id="958" href="Relative-indentation.html#958" class="Postulate">S</a> <a id="960" class="Symbol">:</a> <a id="962" class="PrimitiveType">Set</a>
-\end{code}<a id="976" class="Comment">
+<a id="911" class="Keyword">module</a> <a id="918" href="Relative-indentation.html#918" class="Module">_</a> <a id="920" class="Keyword">where</a>
+         <a id="935" class="Keyword">postulate</a>
+          <a id="955" href="Relative-indentation.html#955" class="Postulate">S</a> <a id="957" class="Symbol">:</a> <a id="959" class="PrimitiveType">Set</a>
+\end{code}<a id="973" class="Comment">
 
-\begin{AgdaMultiCode}{2}
+\begin{AgdaMultiCode}
 </a>\begin{code}
-<a id="1016" class="Keyword">module</a> <a id="1023" href="Relative-indentation.html#1023" class="Module">_</a> <a id="1025" class="Keyword">where</a>
-\end{code}<a id="1041" class="Comment">
+<a id="1010" class="Keyword">module</a> <a id="1017" href="Relative-indentation.html#1017" class="Module">_</a> <a id="1019" class="Keyword">where</a>
+\end{code}<a id="1035" class="Comment">
 </a>\begin{code}
-  <a id="1057" class="Keyword">postulate</a> <a id="1067" href="Relative-indentation.html#1067" class="Postulate">T</a> <a id="1069" class="Symbol">:</a> <a id="1071" class="PrimitiveType">Set</a>
-            <a id="1087" href="Relative-indentation.html#1087" class="Postulate">U</a> <a id="1089" class="Symbol">:</a> <a id="1091" class="PrimitiveType">Set</a>
-\end{code}<a id="1105" class="Comment">
+  <a id="1051" class="Keyword">postulate</a> <a id="1061" href="Relative-indentation.html#1061" class="Postulate">T</a> <a id="1063" class="Symbol">:</a> <a id="1065" class="PrimitiveType">Set</a>
+            <a id="1081" href="Relative-indentation.html#1081" class="Postulate">U</a> <a id="1083" class="Symbol">:</a> <a id="1085" class="PrimitiveType">Set</a>
+\end{code}<a id="1099" class="Comment">
 \end{AgdaMultiCode}
 
-\begin{AgdaSuppressSpace}{2}
+\begin{AgdaSuppressSpace}
 </a>\begin{code}
-<a id="1169" class="Keyword">module</a> <a id="1176" href="Relative-indentation.html#1176" class="Module">_</a> <a id="1178" class="Keyword">where</a>
-\end{code}<a id="1194" class="Comment">
+<a id="1160" class="Keyword">module</a> <a id="1167" href="Relative-indentation.html#1167" class="Module">_</a> <a id="1169" class="Keyword">where</a>
+\end{code}<a id="1185" class="Comment">
 </a>\begin{code}
-  <a id="1210" class="Keyword">postulate</a> <a id="1220" href="Relative-indentation.html#1220" class="Postulate">V</a> <a id="1222" class="Symbol">:</a> <a id="1224" class="PrimitiveType">Set</a>
-            <a id="1240" href="Relative-indentation.html#1240" class="Postulate">W</a> <a id="1242" class="Symbol">:</a> <a id="1244" class="PrimitiveType">Set</a>
-\end{code}<a id="1258" class="Comment">
+  <a id="1201" class="Keyword">postulate</a> <a id="1211" href="Relative-indentation.html#1211" class="Postulate">V</a> <a id="1213" class="Symbol">:</a> <a id="1215" class="PrimitiveType">Set</a>
+            <a id="1231" href="Relative-indentation.html#1231" class="Postulate">W</a> <a id="1233" class="Symbol">:</a> <a id="1235" class="PrimitiveType">Set</a>
+\end{code}<a id="1249" class="Comment">
 \end{AgdaSuppressSpace}
 
 </a>\begin{code}
-<a id="X" href="Relative-indentation.html#X" class="Function">X</a> <a id="1299" class="Symbol">:</a> <a id="1301" class="PrimitiveType">Set₁</a>
-<a id="1306" href="Relative-indentation.html#X" class="Function">X</a> <a id="1308" class="Symbol">=</a>
-  <a id="1312" class="PrimitiveType">Set</a>
-\end{code}<a id="1326" class="Comment">
+<a id="X" href="Relative-indentation.html#X" class="Function">X</a> <a id="1290" class="Symbol">:</a> <a id="1292" class="PrimitiveType">Set₁</a>
+<a id="1297" href="Relative-indentation.html#X" class="Function">X</a> <a id="1299" class="Symbol">=</a>
+  <a id="1303" class="PrimitiveType">Set</a>
+\end{code}<a id="1317" class="Comment">
 
 </a>\begin{code}
-<a id="Y" href="Relative-indentation.html#Y" class="Function">Y</a> <a id="1343" class="Symbol">:</a> <a id="1345" class="PrimitiveType">Set₁</a>
-<a id="1350" href="Relative-indentation.html#Y" class="Function">Y</a> <a id="1352" class="Symbol">=</a>       <a id="1360" class="PrimitiveType">Set</a>
+<a id="Y" href="Relative-indentation.html#Y" class="Function">Y</a> <a id="1334" class="Symbol">:</a> <a id="1336" class="PrimitiveType">Set₁</a>
+<a id="1341" href="Relative-indentation.html#Y" class="Function">Y</a> <a id="1343" class="Symbol">=</a>       <a id="1351" class="PrimitiveType">Set</a>
 
-<a id="Zzzzzzzzz" href="Relative-indentation.html#Zzzzzzzzz" class="Function">Zzzzzzzzz</a> <a id="1375" class="Symbol">:</a> <a id="1377" class="PrimitiveType">Set</a> <a id="1381" class="Symbol">→</a> <a id="1383" class="PrimitiveType">Set</a>
-<a id="1387" href="Relative-indentation.html#Zzzzzzzzz" class="Function">Zzzzzzzzz</a> <a id="1397" href="Relative-indentation.html#1397" class="Bound">X</a>
-          <a id="1409" class="Symbol">=</a> <a id="1411" href="Relative-indentation.html#1397" class="Bound">X</a>
-\end{code}<a id="1423" class="Comment">
+<a id="Zzzzzzzzz" href="Relative-indentation.html#Zzzzzzzzz" class="Function">Zzzzzzzzz</a> <a id="1366" class="Symbol">:</a> <a id="1368" class="PrimitiveType">Set</a> <a id="1372" class="Symbol">→</a> <a id="1374" class="PrimitiveType">Set</a>
+<a id="1378" href="Relative-indentation.html#Zzzzzzzzz" class="Function">Zzzzzzzzz</a> <a id="1388" href="Relative-indentation.html#1388" class="Bound">X</a>
+          <a id="1400" class="Symbol">=</a> <a id="1402" href="Relative-indentation.html#1388" class="Bound">X</a>
+\end{code}<a id="1414" class="Comment">
 
 \end{document}
 </a></pre></body></html>
